<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_confirm_message"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginBottom="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/dialog_button_cancel"
            android:minWidth="80dp"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <Button
            android:layout_weight="1"
            android:id="@+id/confirmButton"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:background="@drawable/dialog_button_confirm"
            android:minWidth="80dp"
            android:text="@string/confirm"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>



