<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/bottomWrapper"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_alignParentBottom="true"
        android:background="#1B2127">

        <RelativeLayout
            android:layout_marginTop="16dp"
            android:id="@+id/mySettingButton"
            android:layout_width="104dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/main_bottom_button_my_setting">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/my_config"
                android:textColor="#fff">

            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:alpha="0.5"
            android:id="@+id/saveConfigButton"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/mySettingButton"
            android:background="@drawable/main_bottom_button_saved_setting">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/save_config"
                android:textColor="#fff">

            </TextView>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:paddingTop="36dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomWrapper"
        android:background="#161C21"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <!--    最顶部的语言切换和个人中心按钮-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                android:textColor="#fff"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/userInfoButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:src="@mipmap/wode" />


            <LinearLayout
                android:id="@+id/languageButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@+id/userInfoButton"
                android:background="@drawable/main_top_button_language"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingTop="6dp"
                android:paddingEnd="8dp"
                android:paddingBottom="6dp">

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="6dp"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@mipmap/yuyan" />

                <TextView
                    android:id="@+id/languageText"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:text="@string/language_cn"
                    android:textColor="#fff"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="6dp"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginLeft="4dp"
                    android:src="@mipmap/arrow1" />
            </LinearLayout>

        </RelativeLayout>
        <!--    最顶部的语言切换和个人中心按钮-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/main_window_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/select_config_info"
                android:textColor="#fff"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/main_window_selector_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/cpu"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/cpuSelectorButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cpuSelectorText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:text="@string/please_select"
                        android:textColor="@color/home_name_dark"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="match_parent"
                        android:src="@mipmap/arrow2" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/main_window_selector_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/gpu"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/gpuSelectorButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"

                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/gpuSelectorText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:text="@string/please_select"
                        android:textColor="@color/home_name_dark"
                        android:textSize="14sp" />

                    <ImageView

                        android:layout_width="14dp"
                        android:layout_height="match_parent"
                        android:src="@mipmap/arrow2" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/main_window_selector_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/disk_count"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/diskSelectorButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"

                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/diskSelectorText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:text="@string/please_select"
                        android:textColor="@color/home_name_dark"
                        android:textSize="14sp" />

                    <ImageView

                        android:layout_width="14dp"
                        android:layout_height="match_parent"
                        android:src="@mipmap/arrow2" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:alpha="0.5"
                android:id="@+id/startCalButton"
                android:layout_marginBottom="20dp"
                android:background="@drawable/main_start_cal"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <TextView
                    android:id="@+id/startCalText"
                    android:text="@string/start_calculation"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/main_window_bg"
            android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="14dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expected_power"
                        android:textColor="#fff"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_marginLeft="4dp"
                        android:layout_width="14dp"
                        android:layout_height="match_parent"
                        android:src="@mipmap/tishi" />

                    <LinearLayout
                        android:gravity="end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/expectPower"
                            android:layout_marginRight="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pending_calculation"
                            android:textColor="@color/home_name_dark"
                            android:textSize="14sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/watt"
                            android:textColor="#D0D2D3"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#3B3B3B" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motherboard_series"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:layout_width="14dp"
                    android:layout_height="match_parent"
                    android:src="@mipmap/tishi" />



            </LinearLayout>
            <LinearLayout
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@drawable/main_window_selector_bg"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">
                <LinearLayout
                    android:layout_marginTop="12dp"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/main_suggest_title"
                        android:paddingStart="4dp"
                        android:paddingTop="2dp"
                        android:paddingEnd="4dp"
                        android:paddingBottom="2dp"
                        android:text="@string/recommended"
                        android:textColor="#fff"/>

                    <TextView
                        android:id="@+id/expectSuggestMotherboard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:gravity="end"
                        android:text="待测算"
                        android:textColor="@color/home_name_dark"
                        android:textSize="14sp" />
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="16dp"/>
                <View

                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/pop_divider"
                    />
                <View
                    android:layout_width="0dp"
                    android:layout_height="16dp"/>
                <LinearLayout
                    android:layout_marginBottom="12dp"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:textSize="14sp"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:textColor="#fff"
                        android:background="@drawable/main_support_title"
                        android:text="@string/supported"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:gravity="end"
                        android:id="@+id/expectSupportMotherboard"
                        android:layout_marginEnd="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="待测算"
                        android:textColor="@color/home_name_dark"
                        android:textSize="14sp" />
                    <com.google.android.flexbox.FlexboxLayout
                        android:layout_marginStart="40dp"
                        android:visibility="gone"
                        app:justifyContent="flex_end"
                        android:id="@+id/expectSupportMotherboardList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:flexDirection="row"
                        app:flexWrap="wrap"
                        android:minHeight="24dp">

                    </com.google.android.flexbox.FlexboxLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>